--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laraveles/spanish": "^1.4"
+        "laraveles/spanish": "^1.4",
+        "spatie/laravel-fractal": "^5.7"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
