--- a/composer.json
+++ b/composer.json
@@ -8,22 +8,21 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
-        "laravel/framework": "5.8.*",
-        "laravel/passport": "7.5.1",
-        "laravel/tinker": "^1.0",
-        "laraveles/spanish": "^1.4",
+        "laravel/framework": "^6.18.29",
+        "laravel/passport": "^9.3",
+        "laravel/tinker": "^2.0",
+        "laraveles/spanish": "^1.5",
         "spatie/laravel-fractal": "^5.7"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
+        "facade/ignition": "^1.4",
+        "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
